[package]
name = "amadeus-serde"
version = "0.1.4"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "json", "csv", "parse"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.4"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
doc = []

[dependencies]
amadeus-core = { version = "=0.1.4", path = "../amadeus-core" }
amadeus-types = { version = "=0.1.4", path = "../amadeus-types" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
csv = "1.0"
linked-hash-map = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_closure = "0.2"
serde_json = "1.0"
sum = { version = "0.1", features = ["serde"] }
