[package]
name = "amadeus-serde"
version = "0.4.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "json", "csv", "parse"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.4.2", path = "../amadeus-core" }
amadeus-types = { version = "=0.4.2", path = "../amadeus-types" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
csv = "1.0"
educe = "0.4"
futures = "0.3"
hashlink = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_closure = "0.3"
serde_json = "1.0"
sum = { version = "0.1.7", default-features = false, features = ["serde"] }
recycle = "0.1"

[build-dependencies]
rustversion = "1.0"
