[package]
name = "amadeus-streaming"
version = "0.3.7"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["data-structures", "algorithms", "science"]
keywords = ["streaming-algorithm", "probabilistic", "sketch", "data-structure", "hyperloglog"]
description = """
SIMD-accelerated implementations of various streaming algorithms, including Count–min sketch, Top k, HyperLogLog, Reservoir sampling.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[features]
nightly = ["packed_simd"]

[dependencies]
twox-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7", features = ["small_rng"] }
packed_simd = { version = "0.3", features = ["into_bits"], optional = true }

[build-dependencies]
rustversion = "1.0"
