[package]
name = "amadeus-types"
version = "0.1.0"
license = "Apache-2.0"
description = "Derive Macro TODO"
homepage = "https://github.com/alecmocatta/amadeus"
repository = "https://github.com/alecmocatta/amadeus"
authors = ["..."]
keywords = [ "arrow", "parquet", "hadoop" ]
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
linked-hash-map = "0.5"
fxhash = "0.2"
chrono = "0.4"
