[package]
name = "amadeus-types"
version = "0.4.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "date-and-time", "data-structures"]
keywords = ["amadeus", "distributed", "data-science", "data", "logs"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.4.2", path = "../amadeus-core" }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
fxhash = "0.2"
hashlink = "0.6"
once_cell = "1.0"
ordered-float = "2.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.1", features = ["serde"] }
recycle = "0.1"

[build-dependencies]
rustversion = "1.0"
