[package]
name = "amadeus_derive"
version = "0.1.0"
license = "Apache-2.0"
description = "Derive Macro TODO"
homepage = "https://github.com/alecmocatta/amadeus"
repository = "https://github.com/alecmocatta/amadeus"
authors = ["..."]
keywords = [ "arrow", "parquet", "hadoop" ]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4", default-features = false }
quote = { version = "0.6", default-features = false }
syn = { version = "0.15", default-features = false, features = ["derive", "clone-impls", "parsing", "printing", "proc-macro"] }
